# coding-agent-python

./: CLAUDE.md  README.md  noxfile.py  pyproject.toml
src/coding_agent_python/: agent_loop.py  main.py  tools.py
src/coding_agent_python/core/: agent_loop.py
src/coding_agent_python/tools/: __init__.py  core_tools.py  todo_tools.py
tests/: conftest.py
tests/integration/: test_agent_integration.py
tests/unit/: test_agent_loop.py  test_tools.py
tests/unit/core/: test_agent_loop.py
tests/unit/tools/: test_core_tools.py  test_todo_tools.py
